--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Zhiwen Huang's Personal Website"
+      content="Zhiwen Huang's personal website"
+    />
     <title>Zhiwen Huang | Software Engineer</title>
   </head>
   <body>
